example rule checks